# talenthawk

./: .env.example  .gitignore  README.md  dev.sh  pyproject.toml  streamlit_app.py
data/mappings/: career_page_mappings.json
data/persistence/: category_keywords.json  company_filter.json  title_filter.json
talenthawk/: __init__.py  career_page_tracker.py  categorize.py  fetch_jobs.py  job_cache.py  salary_parse.py  settings.py  storage.py  viz_core.py  web_api.py
web/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
web/scripts/: copy-plotly.mjs
web/src/: App.css  App.tsx  api.ts  index.css  plotlySetup.tsx
