[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "talenthawk"
version = "0.1.0"
description = "Local job indexing, company filters, and hiring insights"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "pandas>=2.0.0",
    "plotly>=5.18.0",
    "python-dotenv>=1.2.2",
    "streamlit>=1.28.0",
]

[tool.hatch.build.targets.wheel]
packages = ["talenthawk"]
